--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -8,6 +8,7 @@
 <form method="get">
 <h2>Data Submitted Successfully!</h2>
 <a href="/employeeForm">Go back to form</a>
+<a href="/employeeDetails">Employee Details</a>
 </form>
 </body>
 </html>
